@@ -24,7 +24,7 @@
 #ifdef HAS_SOCKETS
 #include "socketaddr.h"
 
-static int msg_flag_table[] = {
+static const int msg_flag_table[] = {
   MSG_OOB, MSG_DONTROUTE, MSG_PEEK
 };
 
