@@ -44,7 +44,7 @@
 #define EOVERFLOW ERANGE
 #endif
 
-static int file_kind_table[] = {
+static const int file_kind_table[] = {
   S_IFREG, S_IFDIR, S_IFCHR, S_IFBLK, S_IFLNK, S_IFIFO, S_IFSOCK
 };
 
