@@ -59,7 +59,7 @@
 #define S_IFBLK 0
 #endif
 
-static int file_kind_table[] = {
+static const int file_kind_table[] = {
   S_IFREG, S_IFDIR, S_IFCHR, S_IFBLK, S_IFLNK, S_IFIFO, S_IFSOCK
 };
 
